--- a/Testing/pom.xml
+++ b/Testing/pom.xml
@@ -15,6 +15,7 @@
 	</properties>
 
 	<dependencies>
+		<!-- Dependencias para test con powermock -->
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -46,6 +47,15 @@
 			<version>3.4</version>
 		</dependency>
 
+
+
+		<!-- Dependencias para test con mockito -->
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+		</dependency>
 
 
 	</dependencies>
