--- a/JPA/pom.xml
+++ b/JPA/pom.xml
@@ -13,6 +13,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hibernate.version>4.3.8.Final</hibernate.version>
+		<hibernate.ehcache.version>4.3.8.Final</hibernate.ehcache.version>
+		<hibernate.ehcache.core.version>2.5.1</hibernate.ehcache.core.version>
 		<version.commons_codec>1.9</version.commons_codec>
 	</properties>
 
@@ -35,13 +37,24 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.31</version>
 		</dependency>
+		<!-- Eh Cache -->
+<dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-ehcache</artifactId>
+	<version>${hibernate.ehcache.version}</version>
+</dependency>
+<dependency>
+	<groupId>net.sf.ehcache</groupId>
+	<artifactId>ehcache-core</artifactId>
+	<version>${hibernate.ehcache.core.version}</version>
+</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		
+		<!-- The Apache Commons Codec  -->
 		 <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
